--- a/hackathon.clab.yaml
+++ b/hackathon.clab.yaml
@@ -20,13 +20,21 @@ topology:
     client1:
       kind: linux
       exec:
-        - ip addr add 192.168.1.2/24 dev eth1
-        - ip route add 192.168.2.0/24 via 192.168.1.1
+        - ip link add link eth1 name eth1.100 type vlan id 100
+        - ip link set dev eth1.100 up
+        - ip addr add 192.168.100.1/24 dev eth1.100
     client2:
       kind: linux
       exec:
-        - ip addr add 192.168.2.2/24 dev eth1
-        - ip route add 192.168.1.0/24 via 192.168.2.1
+        - ip link add link eth1 name eth1.100 type vlan id 100
+        - ip link set dev eth1.100 up
+        - ip addr add 192.168.100.2/24 dev eth1.100
+    client3:
+      kind: linux
+      exec:
+        - ip link add link eth1 name eth1.100 type vlan id 100
+        - ip link set dev eth1.100 up
+        - ip addr add 192.168.100.3/24 dev eth1.100
 
   links:
     - endpoints: ["spine1:ethernet-1/1", "leaf1:ethernet-1/31"]
@@ -36,4 +44,5 @@ topology:
     - endpoints: ["leaf1:ethernet-1/30", "leaf2:ethernet-1/30"]
     - endpoints: ["leaf1:ethernet-1/1", "client1:eth1"]
     - endpoints: ["leaf2:ethernet-1/1", "client2:eth1"]
+    - endpoints: ["leaf2:ethernet-1/2", "client3:eth1"]
 
