--- a/hackathon.clab.yaml
+++ b/hackathon.clab.yaml
@@ -23,18 +23,30 @@ topology:
         - ip link add link eth1 name eth1.100 type vlan id 100
         - ip link set dev eth1.100 up
         - ip addr add 192.168.100.1/24 dev eth1.100
+        - ip link add link eth1 name eth1.200 type vlan id 200
+        - ip link set dev eth1.200 up
+        - ip addr add 192.168.201.2/24 dev eth1.200
+        - ip route add 192.168.200.0/22 via 192.168.201.1
     client2:
       kind: linux
       exec:
         - ip link add link eth1 name eth1.100 type vlan id 100
         - ip link set dev eth1.100 up
         - ip addr add 192.168.100.2/24 dev eth1.100
+        - ip link add link eth1 name eth1.200 type vlan id 200
+        - ip link set dev eth1.200 up
+        - ip addr add 192.168.202.2/24 dev eth1.200
+        - ip route add 192.168.200.0/22 via 192.168.202.1
     client3:
       kind: linux
       exec:
         - ip link add link eth1 name eth1.100 type vlan id 100
         - ip link set dev eth1.100 up
         - ip addr add 192.168.100.3/24 dev eth1.100
+        - ip link add link eth1 name eth1.200 type vlan id 200
+        - ip link set dev eth1.200 up
+        - ip addr add 192.168.203.2/24 dev eth1.200
+        - ip route add 192.168.200.0/22 via 192.168.203.1
 
   links:
     - endpoints: ["spine1:ethernet-1/1", "leaf1:ethernet-1/31"]
